[gd_scene load_steps=2 format=3 uid="uid://cg1d1btdeiatk"]

[ext_resource type="Script" path="res://Scenes/Menu/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -34.0
offset_right = 36.0
offset_bottom = 34.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"
